# LinuxApplicationDevelopment2020

./: .gitignore  README.md  git-log-02-11-20.txt
02_BuildReq/: main.c
03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  fun.c
05_Environmental/: Makefile.am  configure.ac  re.c
06_Debugging/: double_free.c
07_DebuggingTracing/: Makefile  fakeunlinkat.c  test-without-wrapper.sh  test-wrapper.sh
08_TestingCoverage/: Makefile.am  README.md  configure.ac
08_TestingCoverage/src/: Makefile.am  buf.c
08_TestingCoverage/tests/: Makefile.am  test.ts  test_buf_capacity.ts  test_buf_clear.ts  test_buf_grow.ts  test_buf_pop.ts  test_buf_push.ts  test_buf_size.ts
09_I18nL10n/: Makefile.am  README.md  configure.ac  guess.c  ru.po
10_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  guess.c  guess.man  guess.md  guess.pot  ru.po
11_Toolkits/: Makefile.am  configure.ac  counter.c  text.txt
12_ScriptingText/: Window.c  configure.ac  re.h
13_PatchInstall/: Makefile.am  configure.ac  guess.c  ru.po
